styles/main.css
/*remove browsers default margin and padding*/	
*{
	margin: 0;
	padding: 0;
}

/* external font added*/
@font-face {
  font-family: 'myraid';
  src: url('../fonts/MyriadPro-Regular.eot');
  src: url('../fonts/MyriadPro-Regular.woff2') format('woff2'),
       url('../fonts/MyriadPro-Regular.woff') format('woff'),
       url('../fonts/MyriadPro-Regular.ttf') format('truetype'),
       url('../fonts/MyriadPro-Regular.svg#MyriadPro-Regular') format('svg'),
       url('../fonts/MyriadPro-Regular.eot?#iefix') format('embedded-opentype');
  font-weight: normal;
  font-style: normal;
}

body{
	width: 100vw;
	height: 46vw;
	overflow-x: hidden;
}

.backImg{
	position: fixed;
	z-index: -2;
	width: 100vw;
	height: 100vh;
	background: linear-gradient(rgba(0,0,0,0.1),rgba(0,0,0,0.1)),url(../images/background2.jpg) no-repeat;
	background-size: cover;
	background-attachment: fixed;
	transform: scale(2);
	transition: all 0.5s ease;
}

main{
	position: fixed;
	z-index:9999;
	width: 50vw;
	height: 46vw;
	left: 25vw;
	top: 7%;
	transition: all 0.5s ease;
}

.mainback{
	background: rgba(0,0,0,0.3);
}

.mainonclick{
	transform: scale(0.9);
	opacity: 0.1;
	z-index: -1;
}

nav{
	opacity: 0;
	width: 40vw;
	height: 11.5vw;
	margin: auto;
	transition: all 0.5s ease;
}

.myNav{
	margin:4vw 0 0 5vw;
	transform: all 0.5s ease;
}
.myNav button{
	background: transparent;
	padding: 0.76vw 1,38vw;
	transition: all 0.2s ease;
}
.myNav a{
	color:#fff;
	font-family: 'Quicksand', sans-serif;
	letter-spacing: 1px;
	font-size: 1.53vw;
	text-decoration: none;
}

.myNav a:hover{
	color: #fff;
	text-decoration: none;
}

.myNav a:active{
	color: #fff;
	text-decoration: none;
}
.myNav button:hover{
	background:rgba(255,255,255,0.2);
}


main>section{
	width: 50vw;
	height: 19.15vw;
}

.mpart{
	opacity: 0;
	width: 70%;
	margin: auto;
	color: #fff;
	font-family: 'myraid';
	text-align: center;
	transition: all 0.5s ease;
}


.mpart h1{
	opacity: 0;
	font-size: 4.9vw;
	transition: all 0.5s ease;
}

.mpart h4{
	opacity: 0;
	font-size: 1.53vw;
	letter-spacing: 2px;
	transition: all 0.8s ease;
}
.mpart p{
	opacity: 0;
	font-size: 1.53vw;
	letter-spacing: 2px;
	transition: all 0.8s ease;
	padding-bottom: 3.06vw;
}
.mpart small{
	opacity: 0;
	letter-spacing: 3px;
	font-size: 1.53vw;
	transition: all 0.8s ease;
}
.mpart hr{
	opacity: 0;
	animation: increasehr 2s ease;
	animation-delay: 5.5s;
	transition: all 0.5s ease;
}
.nox{
	color:#de1b1b;
}
.bnox{
	color: #3b5998;
}
footer{
	opacity: 0;
	text-align: center;
	color: #3b5998;
	font-size: 1.53vw;
	font-family: 'myraid';
	letter-spacing: 2px;
	padding: 6.13vw;
	transition: all 0.5s ease;
}

/* styling of other tabs*/

body>section{
	position: fixed;
	left: 0;
	right: 0;
	top: 7%;
	display: none;
	overflow-x: hidden;
	width: 50vw;
	word-wrap: break-word;
	height: 46vw;
	color: #fff;
	font-family: 'myraid';
	letter-spacing: 2px;
	margin: 0 auto;
	background: rgba(0,0,0,0.3);
	transition: transform 0.5s ease;
}

body>section>h2{
	text-align: center;
	font-variant: small-caps;
}

body>section>p{
	color: #999;
	font-size: 1.53vw;
	padding: 2.68vw;
}

.cross{
	position: fixed;
	float: right;
	width: 1.53vw;
	height: 1.53vw;
	top: 2%;
	right: 2%;
	cursor: pointer;
}

/*contact*/
.contact{
}


.social{
	width: 3.68vw;
	height: 3.68vw;
}
.social:hover{

}

/*interests*/
.hobimg{
	width: 16.85vw;
	height: 19.15vw;
	padding: 1.53vw 0;
	filter: grayscale(100%);
	transition: filter 0.5s ease;
}
.hobimg:hover{
	filter: grayscale(0);
}
.hobdiv{
	height: 20.69vw;
	width: 50vw;
	white-space: nowrap;
	overflow-x: scroll;
	overflow-y: hidden;
}
.work li,.interests li{
	font-size: 1.53vw;
	padding: 1.53vw;
}

/*scrollbars styling*/
body>section::-webkit-scrollbar{
    width: 1.5%;
}
.hobdiv::-webkit-scrollbar {
	height: 0.766vw;
}
body>section::-webkit-scrollbar-track,.hobdiv::-webkit-scrollbar-track {
    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
}
 
body>section::-webkit-scrollbar-thumb,.hobdiv::-webkit-scrollbar-thumb {
  background-color: #777;
  outline: 1px solid #333;
}

/* keyframe css animation */

@keyframes increasehr {
	from{
		width: 0;
	}
	to{
		width: 100%;
	}
}

/*media query*/
@media only screen and (min-width:1800px){
	.myNav{
		margin:4vw 0 0 6.5vw;
	}
}

